<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:lang="en"
    tools:ignore="MissingTranslation">
    <string name="app_name">BPM-Meter</string>
    <string name="label_measures">Measures</string>
    <string name="label_beats">Beats</string>
    <string name="button_tap" translatable="false">TAP</string>

    <string name="promt_takte">Select the measure-type</string>

    <string-array name="string_taps">
        <item>Measures</item>
        <item>Beats</item>
    </string-array>

    <string name="promt_taps">What are you tapping?</string>
    <string name="label_measures_per_minute">MpM</string>
    <string name="label_measure_duration">sec</string>
    <string name="label_beats_per_minute">BpM</string>
    <string name="label_beat_duration">sec</string>
    <string name="message_parseError">Error while reading the number</string>
    <string name="button_parseError" translatable="false">OK</string>
    
    <string name="about">About</string>
    <string name="reset">Reset</string>
    
    <string name="about_message" translatable="false">© Lars Grefer</string>
    <string name="action_github" translateable="false" translatable="false">GitHub</string>
    <string name="action_github_long">View on GitHub</string>
    <string name="once_per">Once per %s</string>

    <plurals name="beat">
        <item quantity="one">Beat</item>
        <item quantity="two">Beats</item>
        <item quantity="zero">Beats</item>
        <item quantity="few">Beats</item>
        <item quantity="many">Beats</item>
        <item quantity="other">Beats</item>
    </plurals>
    <plurals name="measure">
        <item quantity="one">Measure</item>
        <item quantity="two">Measures</item>
    </plurals>
</resources>