<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:baselineAligned="false"
              tools:showIn="@layout/include_content">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginRight="8dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:gravity="bottom|start"
            android:minHeight="40dp"
            android:text="@string/measures"
            android:textSize="22sp"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp" >

            <EditText
                android:id="@+id/text_measures_per_minute"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:textSize="22sp"
                android:imeOptions="actionGo"
                android:minHeight="40dp"
                android:layout_gravity="center_vertical|left">
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="start|center_vertical"
                android:text="@string/label_measures_per_minute"
                android:textSize="18sp"
                android:layout_gravity="center_vertical|right"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp" >

            <EditText
                android:id="@+id/text_measure_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:minHeight="40dp"
                android:textSize="18sp"
                android:imeOptions="actionGo"
                android:layout_gravity="center_vertical|left"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:text="@string/label_measure_duration"
                android:textSize="18sp"
                android:layout_gravity="center_vertical|right"/>
        </LinearLayout>

        <Spinner
            android:id="@+id/spinner_measure_type"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:prompt="@string/promt_takte" >
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_beats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginLeft="8dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:gravity="bottom|start"
            android:minHeight="40dp"
            android:text="@string/beats"
            android:textSize="22sp"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:minHeight="48dp" >

            <EditText
                android:id="@+id/text_beats_per_minute"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:minHeight="40dp"
                android:textSize="22sp"
                android:imeOptions="actionGo"
                android:layout_gravity="center_vertical|left"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="start|center_vertical"
                android:minHeight="40dp"
                android:text="@string/label_beats_per_minute"
                android:textSize="18sp"
                android:layout_gravity="center_vertical|right"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_bd"
            android:layout_width="fill_parent"
            android:layout_height="48dp" >

            <EditText
                android:id="@+id/text_beat_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:minHeight="40dp"
                android:textSize="18sp"
                android:imeOptions="actionGo"
                android:layout_gravity="center_vertical|left"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:text="@string/label_beat_duration"
                android:textSize="18sp"
                android:layout_gravity="center_vertical|right"/>
        </LinearLayout>

        <Spinner
            android:id="@+id/spinner_tap_type"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:prompt="@string/promt_taps" />
    </LinearLayout>

</LinearLayout>